# pyrst

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  DESIGN_DECISIONS.md  DEVELOPMENT_PLAN.md  DOCUMENTATION_CONSOLIDATION.md  ERRORS.md  GRAMMAR.md  IMPLEMENTATION_SUMMARY.md  IR_INVARIANTS.md  LANGUAGE_SPEC.md  LICENSE  PHASE2_VERIFICATION.md  PHASES_7_8_COMPLETION.md  PHASE_10_BENCHMARKS.md  PHASE_10_PROGRESS.md  PHASE_11_12_COMPLETION.md  PHASE_13_2_COMPLETION.md  PHASE_13_COMPLETION.md  PHASE_13_CONSOLIDATED.md  PHASE_13_PLAN.md  PHASE_13_PROGRESS.md  PHASE_14_COMPLETION.md  PHASE_14_DECISION.md  PHASE_14_PLAN.md  PHASE_15_PLAN.md  PHASE_9_COMPLETION.md  PLAN.md  PROJECT_STATUS.md  PYTHON_COMPATIBILITY.md  README.md  RUNTIME_ABI.md  RUST_BACKEND.md  SPEC.md  SUMMARY_5_28_26.md  TEST_RESULTS.md  TYPE_SYSTEM.md  test_all.sh  test_cross_platform.sh  (+3 more)
.agent-os/: cards.sqlite
.claude/: retrieval_pack.txt
examples/: accounts.py  animal_super.py  applymod_gen.pyrs  applymod_str.pyrs  assert_raise.py  attr_chain_assign.pyrs  aug_assign_ops.pyrs  augassign_shadow.pyrs  augassign_str_list.pyrs  bare_unpack.py  benchmark_sum.py  benchmark_system.pyrs  bitwise.py  block_scoping.pyrs  book_library.py  bool_print.pyrs  bounded_generics.pyrs  bounded_generics_hashable.pyrs  bounded_generics_ops.pyrs  bounded_generics_transitive.pyrs  builtins.py  builtins2.pyrs  byrefmod_a.pyrs  byrefmod_b.pyrs  calc_interpreter.pyrs  callable_field.pyrs  callable_field_indirect.pyrs  callable_test.pyrs  capture_snapshot_mutation.pyrs  catch_builtin_exceptions.pyrs  catch_key_error.pyrs  (+841 more)
(+562 files in other folders)
