[package]
name = "pyrst"
version = "0.0.28"
edition = "2021"
description = "A Pythonic language that compiles to Rust"
license = "MIT OR Apache-2.0"

[[bin]]
name = "pyrst"
path = "src/main.rs"

[dependencies]
tower-lsp-server = "0.23"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std"] }

[dev-dependencies]
